supabase integration test